--- a/style.css
+++ b/style.css
@@ -12,14 +12,14 @@
 body {
     font-size: 14px;
     background-image: url("./images/background.png");
-    background-size: 105% 120%;
+    background-size: 100% 100%;
     display: block;
     height: 97vh;
   }
 
   ::backdrop {
     background-image: url("./images/background.png");
-    background-size: 100% 120%;
+    background-size: 100% 100%;
     display: block;
   }  
 
@@ -34,8 +34,8 @@ body {
         display: flex;
         justify-content: center;
         align-items: center;
-        background-image: url("./images/background.png");
-        background-size: 170% 110%;
+        background-image: url("./images/background2.png");
+        background-size: 100% 105%;
     }
     
 
@@ -113,7 +113,7 @@ body {
         border: 1vh outset rgb(199, 215, 145);
         margin: 0% 10%;
         text-align: center;
-        background-color: rgba(52, 182, 221, 0.9);
+        background-color: rgba(52, 182, 221, 0.8);
         align-items: center;
         justify-content: center;
         padding: 8%;
@@ -369,7 +369,7 @@ img[src="./images/logo.png"]{
 #recipeDiv {
     display: none;
     color: antiquewhite;
-    margin-left: 5%;
+    margin-left: 3%;
     width: 40%;                    
     height: 85%;
     padding-left: 0;
@@ -381,13 +381,13 @@ img[src="./images/logo.png"]{
 }
 
 #recipeInfoDiv{
-    border-left: 1px solid antiquewhite;
-    border-right: 1px solid antiquewhite;
+    border-left: 3px solid antiquewhite;
+    border-right: 3px solid antiquewhite;
     max-width: auto;
     height: 40vh;
     width: 28%;                    
     height: 75%;
-    color: rgb(66, 95, 124);
+    color: antiquewhite;
     text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5), 0 0 10px rgba(0, 0, 0, 0.5), 0 0 10px rgba(0, 0, 0, 0.5);
     font-size: 3.3vh;
     margin-bottom: 2%;
@@ -399,7 +399,7 @@ img[src="./images/logo.png"]{
     display: grid;
     grid-template-columns: auto; /*dont need the extra columns fix later*/
     grid-template-rows: min-content min-content min-content min-content min-content min-content min-content min-content min-content min-content min-content min-content min-content min-content min-content min-content min-content min-content min-content min-content min-content;
-    column-gap: 1.5vw;
+    column-gap: 0vw;
     height: 100%;
     font-size: 3.5vh;
 }
