--- a/style.css
+++ b/style.css
@@ -140,6 +140,10 @@ body {
 
 
 @media screen and (max-width: 3088px) and (orientation:landscape) {
+    .disabled {
+        opacity: 0.6;
+        cursor: not-allowed;
+      }
 
 /* Initialization */  
 .frozen-buttons, 
@@ -200,7 +204,7 @@ body{
     margin: 0 auto;
     height: 12vh;
     width: 49%;
-    font-size: 3vh;
+    font-size: 6vh;
     text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5), 0 0 10px rgba(0, 0, 0, 0.5), 0 0 10px rgba(0, 0, 0, 0.5);
     text-align: center;
     padding: 0 2%;
@@ -370,7 +374,7 @@ img[src="./images/logo.png"]{
     display: none;
     color: antiquewhite;
     margin-left: 3%;
-    width: 40%;                    
+    width: 60%;                    
     height: 85%;
     padding-left: 0;
     text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5), 0 0 10px rgba(0, 0, 0, 0.5), 0 0 10px rgba(0, 0, 0, 0.5);
@@ -399,9 +403,9 @@ img[src="./images/logo.png"]{
     display: grid;
     grid-template-columns: auto; /*dont need the extra columns fix later*/
     grid-template-rows: min-content min-content min-content min-content min-content min-content min-content min-content min-content min-content min-content min-content min-content min-content min-content min-content min-content min-content min-content min-content min-content;
-    column-gap: 0vw;
+    column-gap: .5vw;
     height: 100%;
-    font-size: 3.5vh;
+    font-size: 350%;
 }
 
 #glass{
